# lte/cloud/go/services/lte/obsidian/models/cell_configuration_swaggergen.go
@@ -1,0 +1,55 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// CellConfiguration Cell Configuration for eNodeb devices.
+// swagger:model CellConfiguration
+type CellConfiguration struct {
+
+	// mme pool 1
+	MmePool1 string `json:"mme_pool_1,omitempty"`
+
+	// mme pool 2
+	MmePool2 string `json:"mme_pool_2,omitempty"`
+
+	// plmn id
+	PlmnID string `json:"plmn_id,omitempty"`
+}
+
+// Validate validates this cell configuration
+func (m *CellConfiguration) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CellConfiguration) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CellConfiguration) UnmarshalBinary(b []byte) error {
+	var res CellConfiguration
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
