# lte/cloud/go/services/lte/obsidian/models/swagger.v1.yml
@@ -2290,6 +2290,50 @@ definitions:
         type: string
         format: ipv4
         example: '10.0.2.1'
+      RadioConfiguration:
+        $ref: '#/definitions/RadioConfiguration'
+  RadioConfiguration:
+    description: Radio Configuration for eNodeb devices.
+    type: object
+    minLength: 1
+    properties:
+      CellConfiguration:
+        $ref: '#/definitions/CellConfiguration'
+      PowerControlParameters:
+        $ref: '#/definitions/PowerControlParameters'
+  CellConfiguration:
+    description: Cell Configuration for eNodeb devices.
+    type: object
+    minLength: 1
+    properties:
+      plmn_id:
+        type: string
+        example: '00101'
+      mme_pool_1:
+        type: string
+        example: ''
+      mme_pool_2:
+        type: string
+        example: ''
+  PowerControlParameters:
+    description: Power Contorl Parameters Configuration for eNodeb devices.
+    type: object
+    minLength: 1
+    properties:
+      reference_signal_power:
+        type: integer
+        format: int32
+        example: 12
+      pb:
+        type: integer
+        format: uint32
+        maximum: 3
+        minimum: 0
+        example: 0
+      pa:
+        type: integer
+        format: int32
+        example: -3
 
   unmanaged_enodeb_configuration:
     description: Configuration for externally managed eNodeb devices.
